# DeepSudoku

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  evaluate.py  play.py  pyproject.toml  requirements.txt  train.py  utils.py
.github/workflows/: ci.yml
deep_sudoku/: dataset.py  generator.py  metric.py  model.py  transform.py
deep_sudoku/data/: dataset.py  downloader.py  generator.py  validator.py
deep_sudoku/model/: __init__.py  block.py  model.py
sudoku_rl/: env.py  game.py  sudoku_generator.py  sudoku_validator.py  utils.py
test/: conftest.py  test_env.py  test_sudoku_generator.py  test_sudoku_validator.py  test_utils.py
tests/: test_block.py  test_dataset.py  test_metric.py  test_rnn.py  test_transform.py
tools/: apply_formatters.sh  run_all.sh  run_linters.sh
